{
    "name": "ControlsAsset",
    "maps": [
        {
            "name": "Game",
            "id": "948ed058-8702-43bd-8788-ae08f6467f5a",
            "actions": [
                {
                    "name": "TargetSelectedUnits",
                    "type": "Button",
                    "id": "b6af82cf-1a79-405f-87c9-21e7aac9fc9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shift_TargetSelectedUnits",
                    "type": "Button",
                    "id": "a49fcf94-c9cc-4cf3-ac08-418d098229ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "50284be7-1343-4b20-bb2a-a873263e8f9b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCamera",
                    "type": "Button",
                    "id": "1fb6e20e-192c-44ee-ad2b-81b1f26e561d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomCamera",
                    "type": "Value",
                    "id": "a55afd99-965d-4be9-81f8-4f98187fa761",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "79890017-a837-4f59-a50c-16a92df255cb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4e5f748d-e0a8-4712-b79f-514afa4ef3fc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1db238f3-4c75-4ab9-8f11-83ce462aed09",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e3f7a178-8387-42d5-ab88-f71fd86d6700",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3a22e4ff-2f79-48d7-8321-5903c2b83420",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MMB",
                    "id": "cfd0bd86-bec7-47f8-bd65-26041c196caa",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "f089f712-7c01-4805-945f-65c2ecf4df00",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "adbba6fc-757b-4a36-a028-7f30fc9666ab",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "01be0769-254c-4a55-83e1-f67168228479",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21fbdd43-dfa7-4463-b06b-b15c1338ed42",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TargetSelectedUnits",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Shift_RMB",
                    "id": "a53bdbdb-f9a3-4e2b-831a-fed302bfe62c",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift_TargetSelectedUnits",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "binding",
                    "id": "45fb2a4e-3455-4f09-b873-b70abd13f620",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift_TargetSelectedUnits",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier",
                    "id": "757c5e2f-86b2-4ea7-8c3d-7dea357339d4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift_TargetSelectedUnits",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}